--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,7 +97,12 @@
     ],
     "import/prefer-default-export": [
       "off"
-    ]
+    ],
+    "react-hooks/exhaustive-deps": [
+      "off"
+    ],
+    "no-shadow": "off",
+    "no-param-reassign": 0
   },
   "settings": {
     "react": {
