--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "remark-gfm": "^3.0.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^1.1.2"
   },
